--- a/Japanizor/Pages/Jlpt5.razor
+++ b/Japanizor/Pages/Jlpt5.razor
@@ -2,35 +2,60 @@
 @inject HttpClient Http
 @inject IJSRuntime JsRuntime
 
-<h1>Jlpt5</h1>
-<h2>Testing word @current of @total </h2>
-
-@if (session?.Current != null)
-{
-    <p>Kana : @session.Current.Kana</p>
-    <p>Kanji : @session.Current.Kanji</p>
-
-    <form @onsubmit="CheckWord">
-        <p>Romaji : <input id="romajiInput" autocomplete="off" spellcheck="false" @bind-value="@romaji" /></p>
-        @if (!showTranslation)
+<div class="d-flex justify-content-center">
+    <div>
+        @if (loading)
         {
-            <input type="submit" class="btn btn-primary" value="Check" />
+            <p class="text-center">Loading...</p>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                     aria-valuenow="100" aria-valuemin="0"
+                     aria-valuemax="100" style="width: 75%"></div>
+            </div>
         }
-        else
+        @if (session?.Current != null)
         {
-            <button class="btn btn-primary" @onclick="NextWord">Next</button>
-            <p>Translation : @session.Current.Translation</p>
+            <p class="text-center text-muted">Word @current of @total </p>
+            <form @onsubmit="CheckWord">
+                <h4 class="text-center">&nbsp;@session.Current.Kana</h4>
+                <h3 class="text-center">&nbsp;@session.Current.Kanji</h3>
+                <p class="text-center">
+                    @if (!showError && !showTranslation)
+                    {
+                        <div class="alert alert-dark">&nbsp;</div>
+                    }
+                    else if (showError)
+                    {
+                        <div class="alert alert-danger">Try again</div>
+                    }
+                    else if (showTranslation)
+                    {
+                        <div class="alert alert-dark">@session.Current.Translation</div>
+                    }
+                </p>
+                <p class="text-center">
+                    <input id="romajiInput" autocomplete="off" spellcheck="false"
+                           @bind-value="@romaji" />
+                </p>
+                <p class="text-center">
+                    @if (!showTranslation)
+                    {
+                        <button class="btn btn-primary">Check</button>
+                    }
+                    else
+                    {
+                        <button class="btn btn-success" @onclick="NextWord">Next</button>
+                    }
+                </p>
+            </form>
         }
-    </form>
-    @if (showError)
-    {
-        <p>Try again</p>
-    }
-}
+    </div>
+</div>
 
 @code {
     private int total = 0;
     private int current = 0;
+    private bool loading = true;
     private bool showError = false;
     private bool showTranslation = false;
     private string romaji = string.Empty;
@@ -44,7 +69,7 @@
 
         session = words.AsEnumerable().GetEnumerator();
         session.MoveNext();
-
+        loading = false;
         total = words.Length;
         current = 1;
     }
