--- a/Japanizor/Shared/NavMenu.razor
+++ b/Japanizor/Shared/NavMenu.razor
@@ -1,5 +1,7 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
+
     <a class="navbar-brand" href="">Japanizor</a>
+
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,18 +15,28 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="test">
-                <span class="oi oi-plus" aria-hidden="true"></span> Test
+            <NavLink class="nav-link" href="test/jlpt5">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT5
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="jlpt5">
-                <span class="oi oi-plus" aria-hidden="true"></span> JLPT5
+            <NavLink class="nav-link" href="test/jlpt4">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT4
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="words">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Words
+            <NavLink class="nav-link" href="test/jlpt3">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT3
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="test/jlpt2">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT2
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="test/jlpt1">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT1
             </NavLink>
         </li>
     </ul>
