Added info on home and placeholder on romaji input

--- a/Japanizor/Pages/Index.razor
+++ b/Japanizor/Pages/Index.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col col-sm-9 col-md-8 col-lg-7 col-xl-6">
+                <h1>Japanizor</h1>
 
-<h1>Japanizor</h1>
+                <p>This a toy project that I made to play around with blazor and try to learn japanese at the same time</p>
+                <p>Don't expect much, but I hope it can help you a little bit at least</p>
+                <p>Currently it simply promts you with the kana and kanji forms of a random word and you have to type the romanji version in order to see the translation and be allowed to continue to the next word.</p>
+                <p>Loading a test may take a few seconds because of the shuffling (words don't repeat in a single session), specially for N2 and N1</p>
+                <p>As a Progressive Web App, you can install this on your device for quick acces and to maximize space when using on-screen keyboard</p>
+                <p>It <i>may</i> keep working offline if the word list has already loaded.</p>
+                <p>Word list comes from <a class="text-success" href="https://en.wiktionary.org/wiki/Category:Japanese_appendices">Wikitionary appendices</a></p>
+                <p>Have fun!</p>
+                <h4>RMTZ</h4>
 
-<p>This a toy project that I made to play around with blazor and try to learn japanese at the same time</p>
-<p>Don't expect much, but I hope it can help you a little bit at least</p>
-<p>Have fun!</p>
+            </div>
+        </div>
+    </div>
