--- a/Japanizor/Shared/WordSet.razor
+++ b/Japanizor/Shared/WordSet.razor
@@ -12,7 +12,7 @@
 }
 else
 {
-    <p class="text-center text-secondary">Word @current of @total </p>
+    <p class="text-center text-secondary">Word @current of @words?.Length </p>
 
     <form @onsubmit="CheckWord">
         <WordTest Word="@session?.Current" State="@state" />
@@ -38,22 +38,18 @@ else
     public string Name { get; set; }
 
     private bool loading = true;
-    private int total = 0;
     private int current = 0;
     private IEnumerator<Jword> session;
     private TestState state = TestState.Prompt;
     private string romaji = string.Empty;
+    private Jword[] words;
 
     protected override async Task OnParametersSetAsync()
     {
         loading = true;
 
-        var words = await Http.GetFromJsonAsync<Jword[]>($"data/{Name}.json");
-        Randomizer.Randomize(words);
-        session = words.AsEnumerable().GetEnumerator();
-        session.MoveNext();
-        total = words.Length;
-        current = 1;
+        words = await Http.GetFromJsonAsync<Jword[]>($"data/{Name}.json");
+        Shuffle();
 
         loading = false;
     }
@@ -67,6 +63,14 @@ else
         return base.OnAfterRenderAsync(firstRender);
     }
 
+    private void Shuffle()
+    {
+        Randomizer.Randomize(words);
+        session = words.AsEnumerable().GetEnumerator();
+        session.MoveNext();
+        current = 1;
+    }
+
     private void CheckWord()
     {
         state = romaji == session?.Current?.Romaji ? TestState.Correct : TestState.Error;
@@ -77,7 +81,15 @@ else
     {
         state = TestState.Prompt;
         romaji = string.Empty;
-        session.MoveNext();
-        current++;
+        if (session.MoveNext())
+        {
+            current++;
+        }
+        else
+        {
+            loading = true;
+            Shuffle();
+            loading = false;
+        }
     }
 }
