--- a/Japanizor/Shared/WordTest.razor
+++ b/Japanizor/Shared/WordTest.razor
@@ -5,7 +5,7 @@
     <h3 class="text-center">&nbsp;@Word?.Kanji</h3>
 
     <p class="text-center">
-        <input id="romajiInput" autocomplete="off" spellcheck="false"
+        <input id="romajiInput" class="text-center" autocomplete="off" spellcheck="false"
                placeholder=" type in romanji " @bind-value="@romaji" />
     </p>
 
