--- a/Japanizor/Shared/WordSet.razor
+++ b/Japanizor/Shared/WordSet.razor
@@ -36,7 +36,7 @@ else
 
     private void Shuffle()
     {
-        Randomizer.Randomize(words);
+        //Randomizer.Randomize(words);
         session = words.AsEnumerable().GetEnumerator();
         session.MoveNext();
         current = 1;
