--- a/Japanizor/Shared/NavMenu.razor
+++ b/Japanizor/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="test/jlpt54">
+                <span class="oi oi-list" aria-hidden="true"></span> JLPT5 and 4
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="test/jlpt4">
                 <span class="oi oi-list" aria-hidden="true"></span> JLPT4
             </NavLink>
