--- a/Japanizor/Shared/MainLayout.razor
+++ b/Japanizor/Shared/MainLayout.razor
@@ -1,11 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
-
-<div class="main">
-    <div class="content px-4">
-        @Body
+<div class="page">
+    <div class="sidebar">
+        <NavMenu />
     </div>
+
+    <main>
+
+
+
+        
+        <article class="content px-4">
+            @Body
+        </article>
+    </main>
 </div>
